cmake_minimum_required(VERSION 3.16)

project(FluentChat VERSION 0.1 LANGUAGES CXX)
#set(CMAKE_CXX_STANDARD 17)

set(FLUENTUI_BUILD_EXAMPLES OFF)
set(FLUENTUI_BUILD_STATIC_LIB OFF)
set(FLUENTUI_BUILD_FRAMELESSHEPLER OFF)
add_subdirectory(src)
add_subdirectory(FluentUI)
set(WITH_GFLAGS OFF)
set(WITH_GTEST OFF)
set(WITH_GMOCK OFF)
set(WITH_UNWIND OFF)
set(BUILD_SHARED_LIBS OFF)
